Update CartPole Keras DNN - 200score.ipynb

--- a/CartPole Keras DNN - 200score.ipynb
+++ b/CartPole Keras DNN - 200score.ipynb
@@ -43,6 +43,7 @@
    ],
    "source": [
     "# gathering data for model training: \n",
+    "# Objective: keep the pole balanced (top score per game: 200).\n",
     "# Each step can be: left or right (0,1). Score is 1 for every move the pole stays balanced in the cart.\n",
     "# All steps will be random (0 or 1) until the pole falls.  \n",
     "# For training purposes, only episodes (games) with final score >= than 80 will be considered.\n",
